welcome.lessons.welcome.methods.picture.PictureMono.scala.error
PictureMono:3: error: not found: value faireV
	faireV(){
        ^