welcome.lessons.welcome.methods.picture.PictureMono.scala.code
override def run() {
	faireV(){
		avance()
		baisseBrosse()
		leveBrosse()
		avance()
		gauche()
		avance();baisseBrosse();leveBrosse();recule()
		droite()
		avance();baisseBrosse();leveBrosse()
}
}
